--- a/flask-todo/requirements.txt
+++ b/flask-todo/requirements.txt
@@ -1,174 +1,5 @@
-anaconda==0.0.1.1
-ansimarkup==1.4.0
-appnope==0.1.0
-asn1crypto==0.24.0
-astroid==2.0.4
-atomicwrites==1.2.1
-attrs==18.2.0
-Automat==0.7.0
-autopep8==1.4.4
-aws-sam-translator==1.12.0
-aws-xray-sdk==2.4.2
-awscli==1.16.240
-backcall==0.1.0
-bcrypt==3.1.7
-beautifulsoup4==4.7.1
-better-exceptions-fork==0.2.1.post6
-bleach==3.1.0
-boto==2.49.0
-boto3==1.9.188
-botocore==1.12.230
-bs4==0.0.1
-bytes==0.0.1.dev4
-certifi==2018.10.15
-cffi==1.12.2
-cfn-lint==0.22.3
-chardet==3.0.4
-Click==7.0
-colorama==0.3.9
-constantly==15.1.0
-coverage==4.5.2
-cryptography==2.6
-cssselect==1.0.3
-cycler==0.10.0
-DateTime==4.3
-decorator==4.3.2
-defusedxml==0.6.0
-Django==2.2.2
-djangorestframework==3.9.4
-dnspython==1.16.0
-docker==4.0.2
-docopt==0.6.2
-docutils==0.14
-ecdsa==0.13.2
-entrypoints==0.3
-fabric==2.5.0
-flake8==3.7.7
-Flask==1.1.1
-future==0.17.1
-gunicorn==19.9.0
-hyperlink==18.0.0
-idna==2.8
-incremental==17.5.0
-invoke==1.3.0
-ipykernel==5.1.1
-ipython==7.3.0
-ipython-genutils==0.2.0
-ipywidgets==7.5.0
-isort==4.3.4
-itsdangerous==1.1.0
-jedi==0.13.3
-Jinja2==2.10.1
-jmespath==0.9.4
-jsondiff==1.1.2
-jsonpatch==1.23
-jsonpickle==1.2
-jsonpointer==2.0
-jsonschema==3.0.1
-jupyter==1.0.0
-jupyter-client==5.2.4
-jupyter-console==6.0.0
-jupyter-core==4.5.0
-kiwisolver==1.0.1
-lazy-object-proxy==1.3.1
-loguru==0.2.5
-lorem==0.1.1
-lxml==4.3.1
-MarkupSafe==1.1.1
-matplotlib==3.0.2
-mccabe==0.6.1
-mistune==0.8.4
-mock==2.0.0
-more-itertools==4.3.0
-moto==1.3.13
-nbconvert==5.5.0
-nbformat==4.4.0
-notebook==5.7.8
-numpy==1.16.2
-pandas==0.24.2
-pandocfilters==1.4.2
-paramiko==2.6.0
-parsel==1.5.1
-parso==0.3.4
 passlib==1.7.1
-pbr==5.1.1
+Flask==1.1.1
+gunicorn
+psycopg2-binary
 peewee==3.9.2
-pep8==1.7.1
-pexpect==4.6.0
-pickleshare==0.7.5
-Pillow==5.4.1
-plotly==3.10.0
-pluggy==0.8.0
-prettytable==0.7.2
-prometheus-client==0.7.1
-prompt-toolkit==2.0.9
-psycopg2-binary==2.8.3
-ptyprocess==0.6.0
-py==1.7.0
-pyasn1==0.4.5
-pyasn1-modules==0.2.4
-pycodestyle==2.5.0
-pycosat==0.6.3
-pycparser==2.19
-PyDispatcher==2.0.5
-pyflakes==2.1.1
-Pygments==2.3.1
-PyHamcrest==1.9.0
-pylint==2.1.1
-pymongo==3.8.0
-PyNaCl==1.3.0
-pyOpenSSL==19.0.0
-pyparsing==2.3.1
-pyrsistent==0.15.2
-pytest==4.0.0
-pytest-cov==2.6.1
-pytest-mock==1.10.0
-pytest-pylint==0.12.3
-python-dateutil==2.8.0
-python-jose==3.0.1
-pytz==2019.1
-PyYAML==5.1
-pyzmq==18.0.2
-qtconsole==4.5.1
-queuelib==1.5.0
-requests==2.21.0
-responses==0.10.6
-retrying==1.3.3
-rsa==3.4.2
-ruamel.yaml==0.16.5
-ruamel.yaml.clib==0.1.2
-s3transfer==0.2.0
-scapy==2.4.2
-scipy==1.2.1
-Scrapy==1.6.0
-selenium==3.141.0
-Send2Trash==1.5.0
-service-identity==18.1.0
-setuptools-scm==1.15.7
-six==1.12.0
-soupsieve==1.8
-speedtest-cli==2.1.1
-SQLAlchemy==1.2.18
-sqlmap==1.3.7
-sqlparse==0.3.0
-sshpubkeys==3.1.0
-terminado==0.8.2
-testpath==0.4.2
-tornado==6.0.3
-traitlets==4.3.2
-transmission==1.4.1
-Twisted==18.9.0
-typed-ast==1.4.0
-urllib3==1.24.3
-virtualenv==16.7.5
-w3lib==1.20.0
-wcwidth==0.1.7
-webencodings==0.5.1
-websocket-client==0.56.0
-Werkzeug==0.15.4
-widgetsnbextension==3.5.0
-wrapt==1.10.11
-wxPython==4.0.4
-xattr==0.9.6
-xmltodict==0.12.0
-zope.interface==4.6.0
