--- a/flask-mailroom/requirements.txt
+++ b/flask-mailroom/requirements.txt
@@ -1,8 +1,4 @@
-click==6.7
-Flask==0.12.3
-itsdangerous==0.24
-Jinja2==2.10
-MarkupSafe==1.0
-peewee==3.2.2
-psycopg2-binary==2.7.4
-Werkzeug==0.14.1
+gunicorn
+psycopg2-binary
+Flask==1.1.1
+peewee==3.11.2
